# school-climate-hub

./: .gitignore  CNAME  README.md  attendance.json  index.html  pyproject.toml  robots.txt  scores.json
dashboard/: index.html  scores.json
data/schools/: pssp_psrp_50.csv
docs/: ACCESS-CONTROL.md  DEMO_SCRIPT.md  DISCLAIMER.md  ONBOARDING.md  PRD.docx  PRD.md  REQUIREMENTS.md  ROADMAP.md  UNICEF-VF-Submission-Brief-Zeeshan-260515v1.docx  architecture.md  gen_prd_docx.py  gen_unicef_submission_docx.py  gen_unicef_video_script_docx.py  methodology-attendance.md  screen-inventory.md  unicef-submission.md  v0.2-scope.md
downloads/: LICENSE.md  README.md  attendance_aggregates.csv  methodology-attendance.md  schools.csv  scores.csv
ingestion/: __init__.py  attendance.py  ecmwf_forecast.py  era5.py  modis_lst.py
mockups/: dashboard-light.html  dashboard.html  schools.json  scores.json
open_data_layer/: schema.md
scoring/: __init__.py  vulnerability.py
scripts/: build_downloads_bundle.py
worker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
